<resources>
    <string name="app_name">Architecture Component</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Movies">Movies</string>
    <string name="tvShows">Tv Shows</string>
    <string name="titleItem">%s(%d)</string>
    <string name="ratingImdb">Popularity : %s</string>
    <string name="story_line">Story Line</string>
    <string name="duration">Home Page</string>
    <string name="colon">:</string>
    <string name="date_released">Date Released</string>
    <string name="genre">Genre</string>
    <string name="catalog">Catalog</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="most_popular">Most Popular</string>
    <string name="least_popular">Least Popular</string>
    <string name="random">Random</string>
    <string name="tidak_ada_data_favourite">Tidak ada data favourite</string>
    <string name="title_favourite">Favourite</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bersihkan_cache_movie">Hapus Cache Movie</string>
    <string name="hapus_cache_tv_show">Hapus Cache Tv Show</string>
    <string name="hapus_favourite_movie">Hapus Favourite Movie</string>
    <string name="hapus_favorite_tv_show">Hapus Favorite Tv Show</string>
</resources>