<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/bt_delete_movie"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/bersihkan_cache_movie"
        android:textAlignment="viewStart"
        app:icon="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toTopOf="@+id/bt_delete_tvshow"
        app:layout_constraintEnd_toEndOf="@+id/bt_delete_tvshow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bt_delete_tvshow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bt_delete_tvshow"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/hapus_cache_tv_show"
        android:textAlignment="viewStart"
        app:icon="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toTopOf="@+id/bt_delete_favorite_movie"
        app:layout_constraintEnd_toEndOf="@+id/bt_delete_favorite_movie"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bt_delete_favorite_movie"
        app:layout_constraintTop_toBottomOf="@+id/bt_delete_movie" />

    <Button
        android:id="@+id/bt_delete_favorite_movie"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/hapus_favourite_movie"
        android:textAlignment="viewStart"
        app:icon="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toTopOf="@+id/bt_delete_favorite_tvshow"
        app:layout_constraintEnd_toEndOf="@+id/bt_delete_favorite_tvshow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bt_delete_favorite_tvshow"
        app:layout_constraintTop_toBottomOf="@+id/bt_delete_tvshow" />

    <Button
        android:id="@+id/bt_delete_favorite_tvshow"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hapus_favorite_tv_show"
        android:textAlignment="viewStart"
        app:icon="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_delete_favorite_movie" />

</androidx.constraintlayout.widget.ConstraintLayout>