<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="3dp" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:textSize="34sp"
            app:title="Title"
            app:expandedTitleMarginBottom="94dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?colorPrimary">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:src="@drawable/image_front_shadow"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/red_700"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/abc_ic_ab_back_material" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:contentPaddingBottom="8dp"
                app:contentPaddingLeft="0dp"
                app:contentPaddingRight="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:text="@string/story_line"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/tv_story_line"
                        app:layout_constraintStart_toStartOf="@+id/textView14" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:text="@string/duration"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/tv_duration"
                        app:layout_constraintStart_toStartOf="@+id/textView14" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:shadowColor="@color/white"
                        android:text="@string/colon"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/tv_duration"
                        app:layout_constraintStart_toStartOf="@+id/textView15" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:shadowColor="@color/white"
                        android:text="@string/colon"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/tv_story_line"
                        app:layout_constraintStart_toStartOf="@+id/textView15" />

                    <TextView
                        android:id="@+id/tv_date_release"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="9dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:shadowColor="@color/white"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/textView15"
                        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:text="@string/date_released"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/tv_date_release"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tv_duration"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:autoLink="web"
                        android:shadowColor="@color/white"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/textView15"
                        app:layout_constraintTop_toBottomOf="@+id/tv_date_release" />

                    <TextView
                        android:id="@+id/tv_story_line"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="9dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:shadowColor="@color/white"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/textView15"
                        app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:shadowColor="@color/white"
                        android:text="@string/colon"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/tv_date_release"
                        app:layout_constraintStart_toEndOf="@+id/textView14" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:text="@string/genre"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/tv_genre"
                        app:layout_constraintStart_toStartOf="@+id/textView14" />

                    <TextView
                        android:id="@+id/tv_genre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:shadowColor="@color/white"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tv_date_release"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:shadowColor="@color/white"
                        android:text="@string/colon"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/tv_genre"
                        app:layout_constraintStart_toStartOf="@+id/textView15" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_to_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:elevation="8dp"
        android:src="@drawable/ic_favorite_red"
        android:contentDescription="@string/add_to_favorite"
        app:layout_anchor="@id/card_detail"
        app:layout_anchorGravity="bottom|right|end"
        app:backgroundTint="@color/white"
        tools:ignore="RtlHardcoded" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>